add media concatenation

--- a/niflheim/.env.sample
+++ b/niflheim/.env.sample
@@ -1,3 +1,4 @@
 DB_USERNAME = sample-username
 DB_PASSWORD = db-password
 FINAL_SONG_FOLDER_PATH = H:/Foo/Bar
+MEDIA_CONCATENATION_SERVICE_URL = https://api.service-name
